[package]
name = "song_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
lapin = "2.1"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.*", features = ["json","cookies"] }
base64 = "0.22"
futures-util = "0.3"
log = "0.4"
urlencoding = "2.1"